Basic quiz app.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webserver with Flask</title>
-</head>
-<body>
-    <h1>Building your own Webserver with Flask</h1>
-    <p>This is a template that renders some data: {{data}}</p>
-</body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h2>Willkommen!</h2>
+    <p>Herzlich willkommen bei diesem super Quiz!</p>
+    <p>Klicken Sie <a href="/question">hier</a> um das Quiz zu starten.
+{% endblock %}
