Added styles to answer.

--- a/static/quiz.css
+++ b/static/quiz.css
@@ -1,35 +1,102 @@
-        body {
-            padding: 0px;
-            margin: 0px;
-        }
-        .navbar {
-            position: fixed;
-            width: 180px;
-            background: forestgreen;
-            height: 100%;
-            margin: 0px;
-        }
-        .nav-item {
-            list-style: None;
-            margin: 20px 10px;
-        }
-        .nav-link {
-            text-decoration: None;
-            color: white;
-            font-size: 1.4rem;
-            transition: all 400ms;
-        }
-        .nav-link:hover {
-            font-size: 1.6rem;
-        }
-        h1 {
-            width: 100%;
-            background: forestgreen;
-            color: white;
-            margin: 0px;
-            padding: 15px 20px;
-        }
-        #content {
-            margin-left: 220px;
-            padding: 30px 20px;
-        }
+body {
+    padding: 0px;
+    margin: 0px;
+}
+.navbar {
+    position: fixed;
+    width: 180px;
+    background: forestgreen;
+    height: 100%;
+    margin: 0px;
+}
+.nav-item {
+    list-style: None;
+    margin: 20px 10px;
+}
+.nav-link {
+    text-decoration: None;
+    color: white;
+    font-size: 1.4rem;
+    transition: all 400ms;
+}
+.nav-link:hover {
+    font-size: 1.6rem;
+}
+h1 {
+    width: 100%;
+    background: forestgreen;
+    color: white;
+    margin: 0px;
+    padding: 15px 20px;
+}
+#content {
+    margin-left: 220px;
+    padding: 30px 20px;
+}
+
+.question {
+    margin: 50px auto;
+    width: 70%;
+    border: 5px dashed forestgreen;
+    border-radius: 15px;
+    padding: 40px 70px;
+}
+
+.question h3 {
+    font-size: 3rem;
+}
+
+.question p {
+    margin: 30px 50px;
+}
+
+.answer-list {
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.answer-item {
+    list-style: None;
+    margin: 0px auto;
+    padding: 0px;
+    width: 300px;
+    text-align: center;
+}
+
+.answer-item a {
+    text-decoration: None;
+    color: white;
+    border: 3px solid forestgreen;
+    background: forestgreen;
+    border-radius: 5px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    transition: all 600ms;
+}
+
+.answer-item a:hover {
+    background: darkgreen;
+    font-size: 2rem;
+}
+
+.wrong {
+    color: darkred;
+}
+
+.answer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30vh;
+    width: 100%;
+}
+
+#answer-text {
+    font-size: 4rem;
+}
