--- a/templates/answer.html
+++ b/templates/answer.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="answer">
-    {% if correct %}
-    <p id="answer-text">Die Antwort ist richtig!</p>
-    {% else %}
-    <p id="answer-text" class="wrong">Die Antwort ist falsch!</p>
-    {% endif %}
+    <div class="answer-container">
+        {% if correct %}
+        <p id="answer-text">Die Antwort ist richtig!</p>
+        {% else %}
+        <p id="answer-text" class="wrong">Die Antwort ist falsch!</p>
+        {% endif %}
     </div>
-
-    <div id="next-question">
+    <div id="next-question" class="answer-container">
         <a href="/question">Weiter zur nächsten Frage</a>        
     </div>
+
 {% endblock %}
