--- a/static/quiz.css
+++ b/static/quiz.css
@@ -5,7 +5,7 @@ body {
 .navbar {
     position: fixed;
     width: 180px;
-    background: forestgreen;
+    background: rgb(2, 65, 70);
     height: 100%;
     margin: 0px;
 }
@@ -24,7 +24,7 @@ body {
 }
 h1 {
     width: 100%;
-    background: forestgreen;
+    background: rgb(57, 139, 145);
     color: white;
     margin: 0px;
     padding: 15px 20px;
@@ -37,7 +37,7 @@ h1 {
 .question {
     margin: 50px auto;
     width: 70%;
-    border: 5px dashed forestgreen;
+    border: 5px dashed rgb(57, 139, 145);
     border-radius: 15px;
     padding: 40px 70px;
 }
@@ -69,8 +69,8 @@ h1 {
 .answer-item a {
     text-decoration: None;
     color: white;
-    border: 3px solid forestgreen;
-    background: forestgreen;
+    border: 3px solid rgb(57, 139, 145)n;
+    background: rgb(57, 139, 145);
     border-radius: 5px;
     width: 100%;
     display: flex;
