--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>Willkommen!</h2>
-    <p>Herzlich willkommen bei diesem super Quiz!</p>
-    <p>Klicken Sie <a href="/question">hier</a> um das Quiz zu starten.
+    <h2>Welcome!</h2>
+    <p>Welcome to our super cool amazing quiz!</p>
+    <p>Please click <a href="/question">here</a> to start the quiz.
+    <p>This is our quiz to see if you are a valid member of gen z or if you need to socialize more
+    </p>    
 {% endblock %}
