--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,9 @@
         <li class="nav-item">
             <a class="nav-link" href="/question">Quiz</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/profile">our bio</a>
+        </li>
     </ul>
     <div id="content">
     {% block content %}
