our.bio.changed

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <a class="nav-link" href="/question">Quiz</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/profile">our bio</a>
+            <a class="nav-link" href="/profile">Our Bio</a>
         </li>
     </ul>
     <div id="content">
