--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h2>This us, peace out</h2>
+    <h2>This is us, peace out</h2>
     <p>Here you are gonna meet three definetly valid Gen Z members. So shut up and read.</p>
     <p>Olivia</p>
     <ul>
