--- a/templates/index.html
+++ b/templates/index.html
@@ -5,4 +5,5 @@
     <p>Please click <a href="/question">here</a> to start the quiz.
     <p>This is our quiz to see if you are a valid member of gen z or if you need to socialize more
     </p>    
+    <img src="https://www.letstalkabout.co.uk/wp-content/uploads/2014/01/funny-dog-swimming.gif">
 {% endblock %}
