--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <h2>Welcome!</h2>
     <p>Welcome to our super cool amazing quiz!</p>
     <p>Please click <a href="/question">here</a> to start the quiz.
-    <p>This is our quiz to see if you are a valid member of gen z or if you need to socialize more
+    <p>This is our quiz to see if you are a valid member of gen z or if you need a better social life
     </p>    
     <img src="https://www.letstalkabout.co.uk/wp-content/uploads/2014/01/funny-dog-swimming.gif">
 {% endblock %}
