--- a/templates/question.html
+++ b/templates/question.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="question">
+        <h2>Question {{question.id}}</h2>
         <h3>{{question.title}}</h3>
         <p>{{question.question}}</p>
         <ul class="answer-list">
