--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,32 +4,32 @@
     <p>Here you are gonna meet three definetly valid Gen Z members. So shut up and read.</p>
     <p>Olivia</p>
     <ul>
-        <li>pronouns:</li>
-        <li>sign:</li>
-        <li>favorite childhood tv show:</li>
-        <li>favorite animal:</li>
-        <li>favorite color:</li>
-        <li>favorite tv show at the moment:</li>
-        <li>favortie childhood movie:</li>
+        <li>pronouns:she/they</li>
+        <li>sign:aries</li>
+        <li>favorite childhood tv show: mona the vampire</li>
+        <li>favorite animal:monkey</li>
+        <li>favorite color:yellow</li>
+        <li>favorite tv show at the moment:euphoria</li>
+        <li>favortie childhood movie:lilo and stitch</li>
     </ul>
     <p>Nicole</p>
     <ul>
-        <li>pronouns:</li>
-        <li>sign:</li>
-        <li>favorite childhood tv show:</li>
-        <li>favorite animal:</li>
-        <li>favorite color:</li>
-        <li>favorite tv show at the moment:</li>
-        <li>favortie childhood movie:</li>
+        <li>pronouns:she/her</li>
+        <li>sign:gemini</li>
+        <li>favorite childhood tv show: Kim Possible</li>
+        <li>favorite animal: cats -> domestic and wild ones</li>
+        <li>favorite color: red, lilac</li>
+        <li>favorite tv show at the moment: Bridgerton</li>
+        <li>favortie childhood movie: Harry Potter und der Feuerkelch</li>
     </ul>
     <p>Sophie</p>
     <ul>
-        <li>pronouns:</li>
-        <li>sign:</li>
-        <li>favorite childhood tv show:</li>
-        <li>favorite animal:</li>
-        <li>favorite color:</li>
-        <li>favorite tv show at the moment:</li>
-        <li>favortie childhood movie:</li>
+        <li>pronouns:she/her</li>
+        <li>sign: aries</li>
+        <li>favorite childhood tv show: Kim Possible, Looney Tunes</li>
+        <li>favorite animal: cats, bears, panthers</li>
+        <li>favorite color: dark green</li>
+        <li>favorite tv show at the moment: euphoria</li>
+        <li>favortie childhood movie: Harry Potter, Snow white, Asterix und Obelix</li>
     </ul>
 {% endblock %}
